dart/lib/src/engine/bindings.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names
// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for tennoji native library
class TennojiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  TennojiBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  TennojiBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  ffi.Pointer<TennojiEngine> engine_create(
    ffi.Pointer<TennojiEngineConfig> config,
  ) {
    return _engine_create(config);
  }

  late final _engine_createPtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<TennojiEngine> Function(ffi.Pointer<TennojiEngineConfig>)
    >
  >('tennoji_engine_create');
  late final _engine_create =
      _engine_createPtr
          .asFunction<
            ffi.Pointer<TennojiEngine> Function(
              ffi.Pointer<TennojiEngineConfig>,
            )
          >();

  void engine_destroy(ffi.Pointer<TennojiEngine> engine) {
    return _engine_destroy(engine);
  }

  late final _engine_destroyPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<TennojiEngine>)>
  >('tennoji_engine_destroy');
  late final _engine_destroy =
      _engine_destroyPtr
          .asFunction<void Function(ffi.Pointer<TennojiEngine>)>();

  ffi.Pointer<TennojiDecoder> decoder_open(
    ffi.Pointer<TennojiEngine> engine,
    ffi.Pointer<ffi.Char> uri,
    TennojiHWAccel accel,
  ) {
    return _decoder_open(engine, uri, accel.value);
  }

  late final _decoder_openPtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<TennojiDecoder> Function(
        ffi.Pointer<TennojiEngine>,
        ffi.Pointer<ffi.Char>,
        ffi.UnsignedInt,
      )
    >
  >('tennoji_decoder_open');
  late final _decoder_open =
      _decoder_openPtr
          .asFunction<
            ffi.Pointer<TennojiDecoder> Function(
              ffi.Pointer<TennojiEngine>,
              ffi.Pointer<ffi.Char>,
              int,
            )
          >();

  void decoder_close(ffi.Pointer<TennojiDecoder> decoder) {
    return _decoder_close(decoder);
  }

  late final _decoder_closePtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<TennojiDecoder>)>
  >('tennoji_decoder_close');
  late final _decoder_close =
      _decoder_closePtr
          .asFunction<void Function(ffi.Pointer<TennojiDecoder>)>();

  int decoder_seek(ffi.Pointer<TennojiDecoder> decoder, int timestamp_us) {
    return _decoder_seek(decoder, timestamp_us);
  }

  late final _decoder_seekPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(ffi.Pointer<TennojiDecoder>, ffi.Int64)>
  >('tennoji_decoder_seek');
  late final _decoder_seek =
      _decoder_seekPtr
          .asFunction<int Function(ffi.Pointer<TennojiDecoder>, int)>();

  int decoder_get_texture(
    ffi.Pointer<TennojiDecoder> decoder,
    int timestamp_us,
  ) {
    return _decoder_get_texture(decoder, timestamp_us);
  }

  late final _decoder_get_texturePtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(ffi.Pointer<TennojiDecoder>, ffi.Int64)>
  >('tennoji_decoder_get_texture');
  late final _decoder_get_texture =
      _decoder_get_texturePtr
          .asFunction<int Function(ffi.Pointer<TennojiDecoder>, int)>();

  int decoder_duration(ffi.Pointer<TennojiDecoder> decoder) {
    return _decoder_duration(decoder);
  }

  late final _decoder_durationPtr = _lookup<
    ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<TennojiDecoder>)>
  >('tennoji_decoder_duration');
  late final _decoder_duration =
      _decoder_durationPtr
          .asFunction<int Function(ffi.Pointer<TennojiDecoder>)>();

  int decoder_read_audio(
    ffi.Pointer<TennojiDecoder> decoder,
    int timestamp_us,
  ) {
    return _decoder_read_audio(decoder, timestamp_us);
  }

  late final _decoder_read_audioPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(ffi.Pointer<TennojiDecoder>, ffi.Int64)>
  >('tennoji_decoder_read_audio');
  late final _decoder_read_audio =
      _decoder_read_audioPtr
          .asFunction<int Function(ffi.Pointer<TennojiDecoder>, int)>();

  ffi.Pointer<TennojiCanvas> canvas_create(
    ffi.Pointer<TennojiEngine> engine,
    int width,
    int height,
  ) {
    return _canvas_create(engine, width, height);
  }

  late final _canvas_createPtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<TennojiCanvas> Function(
        ffi.Pointer<TennojiEngine>,
        ffi.Int32,
        ffi.Int32,
      )
    >
  >('tennoji_canvas_create');
  late final _canvas_create =
      _canvas_createPtr
          .asFunction<
            ffi.Pointer<TennojiCanvas> Function(
              ffi.Pointer<TennojiEngine>,
              int,
              int,
            )
          >();

  void canvas_destroy(ffi.Pointer<TennojiCanvas> canvas) {
    return _canvas_destroy(canvas);
  }

  late final _canvas_destroyPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<TennojiCanvas>)>
  >('tennoji_canvas_destroy');
  late final _canvas_destroy =
      _canvas_destroyPtr
          .asFunction<void Function(ffi.Pointer<TennojiCanvas>)>();

  void canvas_clear(ffi.Pointer<TennojiCanvas> canvas, int color) {
    return _canvas_clear(canvas, color);
  }

  late final _canvas_clearPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<TennojiCanvas>, ffi.Uint32)
    >
  >('tennoji_canvas_clear');
  late final _canvas_clear =
      _canvas_clearPtr
          .asFunction<void Function(ffi.Pointer<TennojiCanvas>, int)>();

  void canvas_draw_rect(
    ffi.Pointer<TennojiCanvas> canvas,
    double left,
    double top,
    double width,
    double height,
    int color,
  ) {
    return _canvas_draw_rect(canvas, left, top, width, height, color);
  }

  late final _canvas_draw_rectPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<TennojiCanvas>,
        ffi.Float,
        ffi.Float,
        ffi.Float,
        ffi.Float,
        ffi.Uint32,
      )
    >
  >('tennoji_canvas_draw_rect');
  late final _canvas_draw_rect =
      _canvas_draw_rectPtr
          .asFunction<
            void Function(
              ffi.Pointer<TennojiCanvas>,
              double,
              double,
              double,
              double,
              int,
            )
          >();

  void canvas_draw_image(
    ffi.Pointer<TennojiCanvas> canvas,
    int texture_id,
    double dx,
    double dy,
  ) {
    return _canvas_draw_image(canvas, texture_id, dx, dy);
  }

  late final _canvas_draw_imagePtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<TennojiCanvas>,
        ffi.Int,
        ffi.Float,
        ffi.Float,
      )
    >
  >('tennoji_canvas_draw_image');
  late final _canvas_draw_image =
      _canvas_draw_imagePtr
          .asFunction<
            void Function(ffi.Pointer<TennojiCanvas>, int, double, double)
          >();

  void canvas_save(ffi.Pointer<TennojiCanvas> canvas) {
    return _canvas_save(canvas);
  }

  late final _canvas_savePtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<TennojiCanvas>)>
  >('tennoji_canvas_save');
  late final _canvas_save =
      _canvas_savePtr.asFunction<void Function(ffi.Pointer<TennojiCanvas>)>();

  void canvas_restore(ffi.Pointer<TennojiCanvas> canvas) {
    return _canvas_restore(canvas);
  }

  late final _canvas_restorePtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<TennojiCanvas>)>
  >('tennoji_canvas_restore');
  late final _canvas_restore =
      _canvas_restorePtr
          .asFunction<void Function(ffi.Pointer<TennojiCanvas>)>();

  void canvas_translate(
    ffi.Pointer<TennojiCanvas> canvas,
    double dx,
    double dy,
  ) {
    return _canvas_translate(canvas, dx, dy);
  }

  late final _canvas_translatePtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<TennojiCanvas>, ffi.Float, ffi.Float)
    >
  >('tennoji_canvas_translate');
  late final _canvas_translate =
      _canvas_translatePtr
          .asFunction<
            void Function(ffi.Pointer<TennojiCanvas>, double, double)
          >();

  void canvas_scale(ffi.Pointer<TennojiCanvas> canvas, double sx, double sy) {
    return _canvas_scale(canvas, sx, sy);
  }

  late final _canvas_scalePtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<TennojiCanvas>, ffi.Float, ffi.Float)
    >
  >('tennoji_canvas_scale');
  late final _canvas_scale =
      _canvas_scalePtr
          .asFunction<
            void Function(ffi.Pointer<TennojiCanvas>, double, double)
          >();

  void canvas_rotate(ffi.Pointer<TennojiCanvas> canvas, double degrees) {
    return _canvas_rotate(canvas, degrees);
  }

  late final _canvas_rotatePtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<TennojiCanvas>, ffi.Float)>
  >('tennoji_canvas_rotate');
  late final _canvas_rotate =
      _canvas_rotatePtr
          .asFunction<void Function(ffi.Pointer<TennojiCanvas>, double)>();

  void canvas_clip_rect(
    ffi.Pointer<TennojiCanvas> canvas,
    double left,
    double top,
    double width,
    double height,
  ) {
    return _canvas_clip_rect(canvas, left, top, width, height);
  }

  late final _canvas_clip_rectPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<TennojiCanvas>,
        ffi.Float,
        ffi.Float,
        ffi.Float,
        ffi.Float,
      )
    >
  >('tennoji_canvas_clip_rect');
  late final _canvas_clip_rect =
      _canvas_clip_rectPtr
          .asFunction<
            void Function(
              ffi.Pointer<TennojiCanvas>,
              double,
              double,
              double,
              double,
            )
          >();

  int canvas_save_layer(ffi.Pointer<TennojiCanvas> canvas, int alpha) {
    return _canvas_save_layer(canvas, alpha);
  }

  late final _canvas_save_layerPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(ffi.Pointer<TennojiCanvas>, ffi.Int)>
  >('tennoji_canvas_save_layer');
  late final _canvas_save_layer =
      _canvas_save_layerPtr
          .asFunction<int Function(ffi.Pointer<TennojiCanvas>, int)>();

  void texture_release(ffi.Pointer<TennojiEngine> engine, int texture_id) {
    return _texture_release(engine, texture_id);
  }

  late final _texture_releasePtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<TennojiEngine>, ffi.Int)>
  >('tennoji_texture_release');
  late final _texture_release =
      _texture_releasePtr
          .asFunction<void Function(ffi.Pointer<TennojiEngine>, int)>();

  ffi.Pointer<TennojiEncoder> encoder_create(
    ffi.Pointer<TennojiEngine> engine,
    ffi.Pointer<TennojiEncoderConfig> config,
  ) {
    return _encoder_create(engine, config);
  }

  late final _encoder_createPtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<TennojiEncoder> Function(
        ffi.Pointer<TennojiEngine>,
        ffi.Pointer<TennojiEncoderConfig>,
      )
    >
  >('tennoji_encoder_create');
  late final _encoder_create =
      _encoder_createPtr
          .asFunction<
            ffi.Pointer<TennojiEncoder> Function(
              ffi.Pointer<TennojiEngine>,
              ffi.Pointer<TennojiEncoderConfig>,
            )
          >();

  int encoder_write_frame(
    ffi.Pointer<TennojiEncoder> encoder,
    ffi.Pointer<TennojiCanvas> canvas,
  ) {
    return _encoder_write_frame(encoder, canvas);
  }

  late final _encoder_write_framePtr = _lookup<
    ffi.NativeFunction<
      ffi.Int Function(ffi.Pointer<TennojiEncoder>, ffi.Pointer<TennojiCanvas>)
    >
  >('tennoji_encoder_write_frame');
  late final _encoder_write_frame =
      _encoder_write_framePtr
          .asFunction<
            int Function(
              ffi.Pointer<TennojiEncoder>,
              ffi.Pointer<TennojiCanvas>,
            )
          >();

  int encoder_write_audio(
    ffi.Pointer<TennojiEncoder> encoder,
    ffi.Pointer<TennojiDecoder> audio_decoder,
    int duration_us,
  ) {
    return _encoder_write_audio(encoder, audio_decoder, duration_us);
  }

  late final _encoder_write_audioPtr = _lookup<
    ffi.NativeFunction<
      ffi.Int Function(
        ffi.Pointer<TennojiEncoder>,
        ffi.Pointer<TennojiDecoder>,
        ffi.Int64,
      )
    >
  >('tennoji_encoder_write_audio');
  late final _encoder_write_audio =
      _encoder_write_audioPtr
          .asFunction<
            int Function(
              ffi.Pointer<TennojiEncoder>,
              ffi.Pointer<TennojiDecoder>,
              int,
            )
          >();

  int encoder_drain_audio_queue(
    ffi.Pointer<TennojiEncoder> encoder,
    ffi.Pointer<TennojiDecoder> decoder,
  ) {
    return _encoder_drain_audio_queue(encoder, decoder);
  }

  late final _encoder_drain_audio_queuePtr = _lookup<
    ffi.NativeFunction<
      ffi.Int Function(ffi.Pointer<TennojiEncoder>, ffi.Pointer<TennojiDecoder>)
    >
  >('tennoji_encoder_drain_audio_queue');
  late final _encoder_drain_audio_queue =
      _encoder_drain_audio_queuePtr
          .asFunction<
            int Function(
              ffi.Pointer<TennojiEncoder>,
              ffi.Pointer<TennojiDecoder>,
            )
          >();

  int encoder_finalize(ffi.Pointer<TennojiEncoder> encoder) {
    return _encoder_finalize(encoder);
  }

  late final _encoder_finalizePtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(ffi.Pointer<TennojiEncoder>)>
  >('tennoji_encoder_finalize');
  late final _encoder_finalize =
      _encoder_finalizePtr
          .asFunction<int Function(ffi.Pointer<TennojiEncoder>)>();

  void encoder_destroy(ffi.Pointer<TennojiEncoder> encoder) {
    return _encoder_destroy(encoder);
  }

  late final _encoder_destroyPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<TennojiEncoder>)>
  >('tennoji_encoder_destroy');
  late final _encoder_destroy =
      _encoder_destroyPtr
          .asFunction<void Function(ffi.Pointer<TennojiEncoder>)>();
}

final class TennojiEngine extends ffi.Opaque {}

final class TennojiDecoder extends ffi.Opaque {}

final class TennojiEncoder extends ffi.Opaque {}

final class TennojiTexture extends ffi.Opaque {}

final class TennojiCanvas extends ffi.Opaque {}

enum TennojiHWAccel {
  TENNOJI_HW_ACCEL_AUTO(0),
  TENNOJI_HW_ACCEL_NONE(1);

  final int value;
  const TennojiHWAccel(this.value);

  static TennojiHWAccel fromValue(int value) => switch (value) {
    0 => TENNOJI_HW_ACCEL_AUTO,
    1 => TENNOJI_HW_ACCEL_NONE,
    _ => throw ArgumentError('Unknown value for TennojiHWAccel: $value'),
  };
}

final class TennojiEngineConfig extends ffi.Struct {
  @ffi.Int32()
  external int width;

  @ffi.Int32()
  external int height;

  @ffi.Int32()
  external int fps;

  external ffi.Pointer<ffi.Char> gpu_backend;
}

final class TennojiEncoderConfig extends ffi.Struct {
  external ffi.Pointer<ffi.Char> output_path;

  @ffi.Int32()
  external int width;

  @ffi.Int32()
  external int height;

  @ffi.Int32()
  external int fps;

  external ffi.Pointer<ffi.Char> video_codec;

  external ffi.Pointer<ffi.Char> audio_codec;

  @ffi.Int32()
  external int audio_sample_rate;

  @ffi.Int32()
  external int audio_channels;
}
